--- a/Web.config
+++ b/Web.config
@@ -71,7 +71,7 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-	  <add name="WebApi" connectionString="server = ANSHUL\LOCALHOST ; Initial Catalog = VCLAP ;User ID = sa; Password = Anshul@1234"/>
+	  <add name="WebApi" connectionString="server = Your_Server_Name ; Initial Catalog = Your_DataBaseName ;User ID = User; Password = Password@1234"/>
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
